test/src/e2e_vm_tests/test_programs/should_pass/language/callpath_local_shadowing/src/lib.sw
library;

pub struct TestStruct {
    pub a: u64,
}
