test/src/e2e_vm_tests/test_programs/should_fail/language/imports/import_access_item_without_import/src/bar.sw
library;

pub struct Bar {
    a: u32,
}
